--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>CoreConX Table of Contents</h1>
         <ul>
+            <li><a href="example/">Example</a></li>
             <li>
                 <a href="test/">Tests</a>
                 <ul>
